[package]
name = "coerceo"
version = "0.0.0"
authors = ["Ryan Huang"]

description = "An unofficial clone of a strategic board game."
license = "AGPL-3.0"

[package.metadata.bundle]
name = "Coerceo"
identifier = "io.github.npn.coerceo"
icon = ["images/64x64.png",
        "images/128x128.png",
        "images/256x256.png",
        "images/512x512.png",
        "images/512x512@2x.png"]

[dependencies]
glium = { version = "0.21", default-features = true }
imgui = { git = "https://github.com/Gekkio/imgui-rs", rev = "a8cd16ef90" }
imgui-glium-renderer = { git = "https://github.com/Gekkio/imgui-rs", rev = "a8cd16ef90" }
